# RodSki

./: .gitignore  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  MANIFEST.in  README.md  REFACTOR_PLAN.md  pyproject.toml  test_expect_fail.xml
rodski/: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  bandit.yaml  capture_cassmall_apis.py  cli_main.py  docker-compose.yml  llm_config.yaml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  sandbox.sh  selftest.py  setup.py  ski_gui.py  ski_run.py
rodski-agent/: MANIFEST.in  Makefile  README.md  pyproject.toml
rodski-agent/benchmark/: __init__.py  comparison.py
rodski-agent/config/: agent_config.yaml
rodski-agent/schemas/: output_schema.json
rodski-agent/src/rodski_agent/: __init__.py  cli.py  mcp_server.py
rodski-agent/tests/: conftest.py  test_benchmark.py  test_cli.py  test_comparison.py  test_config.py  test_contracts.py  test_design_graph.py  test_diagnosis.py  test_error_handling.py  test_execution_graph.py  test_execution_nodes.py  test_kpi.py  test_mcp_server.py  test_memory_store.py  test_pipeline.py  test_result_parser.py  test_retry.py  test_rodski_knowledge.py  test_smart_repair.py  test_visual.py  test_xml_builder.py
rodski-agent/tests/unit/: test_debugger.py  test_design_nodes_v8.py  test_gap_analysis.py  test_skill_loader.py
rodski/api/: rest_helper.py
rodski/builtin_ops/: __init__.py  network_ops.py
rodski/config/: android_config.json  config.json  default_config.yaml  ios_config.json  llm_config.yaml  reviewer_config.yaml  vision_config.yaml
rodski/core/: __init__.py  browser_recycler.py  case_metadata.py  case_parser.py  condition_evaluator.py  config_manager.py  data_parser.py  data_schema_validator.py  data_table_parser.py  diagnosis_engine.py  driver_factory.py  dynamic_executor.py  dynamic_steps.py  exceptions.py  execution_stats.py  global_value_parser.py  json_formatter.py  keyword_engine.py  logger.py  loop_executor.py  metadata_writer.py  model_parser.py  parallel_executor.py  performance.py  profiler.py  recovery_engine.py  result_writer.py  runtime_context.py  runtime_control.py  ski_executor.py  sqlite_data_source.py  sqlite_schema.py  statistics_collector.py  task_executor.py  test_case_explainer.py  test_runner.py  xml_schema_validator.py
rodski/core/assertion/: __init__.py  base_assertion.py  image_matcher.py  video_analyzer.py
rodski/core/recording/: __init__.py  recorder.py
rodski/data/: __init__.py  data_resolver.py  data_verify.xml  excel_parser.py  model_manager.py
rodski/docker/: config.docker.json  entrypoint.sh
rodski/docs/: ADVANCED_TIPS.md  AGENT_AUTOMATION_DESIGN.md  AGENT_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  CI_CD_GUIDE.md  CLI_DESIGN.md  CORE_DESIGN_CONSTRAINTS.md  DATA_FILE_ORGANIZATION.md  DATA_REFERENCE.md  DB_DRIVER_SUPPORT.md  DB_USAGE_GUIDE.md  GUI_USAGE.md  MOBILE_GUIDE.md  MODEL_GUIDE.md  PARALLEL_EXECUTION.md  QUICKSTART.md  README.md  REPORT_GUIDE.md  RODSKI_REQUIREMENTS_HISTORY_2026-03-20.md  SKILL_REFERENCE.md  TEST_CASE_BEST_PRACTICES.md  TEST_CASE_WRITING_GUIDE.md  TROUBLESHOOTING.md  VISION_LOCATION.md  agent-integration.md  index.md  iteration05_summary.md  iteration_06_dynamic_execution.md  iteration_06_summary.md  json_support_design.md  skill-integration.md  核心设计约束.md
rodski/docs/agent-guides/: AGENT_INTEGRATION.md  LIVING_DOCUMENTATION.md  SKILL_REFERENCE.md
rodski/docs/agent-integration/: AGENT_INTEGRATION.md  OPENCLAW_SKILL.md
rodski/docs/best-practices/: error-handling.md  performance.md
rodski/docs/design/: API_REFERENCE.md  ARCHITECTURE.md  CI_CD_GUIDE.md  LLM_VISION_LOCATOR_DESIGN.md  PC_AUTOMATION_ENHANCEMENT.md  README.md  RPA_GAP_ANALYSIS.md  llm-architecture.md  llm-unified-architecture.md  人工提出问题的笔记.md  核心设计约束.md
rodski/docs/reference/: cli.md  configuration.md  keywords.md
rodski/docs/requirements/: README.md  RODSKI_REQUIREMENTS.md  RODSKI_REQUIREMENTS_HISTORY_2026-03-20.md
rodski/docs/user-guides/: API_TESTING_GUIDE.md  CLI_DESIGN.md  DB_TESTING_GUIDE.md  EXCEPTION_HANDLING.md  GUI_USAGE.md  MOBILE_GUIDE.md  PARALLEL_EXECUTION.md  PERFORMANCE.md  QUICKSTART.md  README.md  TEST_CASE_BEST_PRACTICES.md  TEST_CASE_WRITING_GUIDE.md  TROUBLESHOOTING.md
rodski/drivers/: __init__.py  android_driver.py  appium_driver.py  base_driver.py  desktop_driver.py  ios_driver.py  playwright_driver.py  pywinauto_driver.py
rodski/examples/: agent_integration_example.py  android_example.py  api_test_demo.xlsx  demo_case.xlsx  dynamic_execution_example.xml  ios_example.py  iteration05_demo.py
rodski/examples/agent/: README.md  claude_code_integration.py  multi_agent_example.py  opencode_integration.py
rodski/examples/api_test/: README.md
rodski/llm/: __init__.py  client.py  config.py  exceptions.py  token_tracker.py
rodski/observability/: __init__.py  exporter.py  metrics.py  span.py  tracer.py
rodski/report/: __init__.py  collector.py  data_model.py  generator.py  history.py  trend.py
rodski/reviewers/: README.md  __init__.py  cli.py  llm_reviewer.py
rodski/rodski_cli/: __init__.py  capabilities.py  config.py  data.py  data_import.py  docs.py  explain.py  init.py  log.py  model.py  profile.py  report.py  run.py  stats.py
rodski/rodski_docs/: __init__.py
rodski/schemas/: case.xsd  data.xsd  globalvalue.xsd  model.xsd  result.xsd
rodski/scripts/: acceptance.sh  analyze_result.py  check.sh  generate_docs.py  review_test.py  simple_analyze.py  test_recorder.py  validate_xml.py  xiaoli_purchase_flow.py
rodski/tests/: conftest.py  test_data_parser.py  test_iterations_09_10_11.py  test_model_parser.py
rodski/ui/: main_window.py
rodski/utils/: __init__.py  helpers.py
rodski/vision/: __init__.py  ai_verifier.py  bbox_locator.py  cache.py  coordinate_utils.py  desktop_driver.py  exceptions.py  image_matcher.py  llm_analyzer.py  locator.py  matcher.py  ocr_locator.py  omni_client.py  screen_recorder.py  screenshot.py
(+861 files in other folders)
