[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rodski"
version = "6.1.5"
description = "RodSki - XML-driven keyword automation testing framework for AI agents"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Lightning Strike Team"},
]
keywords = [
    "testing", "automation", "keyword-driven", "xml", "playwright",
    "appium", "ai-agent", "test-framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "xmlschema>=2.5.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
web = ["playwright>=1.40.0"]
mobile = ["Appium-Python-Client>=3.0.0"]
gui = ["PyQt6>=6.6.0"]
vision = ["pillow>=10.0.0", "opencv-python-headless>=4.8.0", "numpy>=1.24.0"]
desktop = ["pyautogui>=0.9.54", "pyperclip>=1.8.0", "mss>=9.0.1", "opencv-python>=4.8.0", "numpy>=1.24.0"]
recording = ["mss>=9.0.1", "opencv-python>=4.8.0", "numpy>=1.24.0"]
llm = ["anthropic>=0.18.0", "openai>=1.12.0"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "pytest-mock>=3.12.0"]
all = ["rodski[web,mobile,gui,vision,desktop,recording,llm]"]

[project.scripts]
rodski = "rodski.cli_main:main"

[project.urls]
Homepage = "https://github.com/Sirius1942/RodSki"
Repository = "https://github.com/Sirius1942/RodSki"

[tool.setuptools.packages.find]
include = ["rodski", "rodski.*"]
exclude = [
    "rodski.tests", "rodski.tests.*",
    "rodski.docs", "rodski.docs.*",
    "rodski.examples", "rodski.examples.*",
    "rodski.scripts", "rodski.scripts.*",
    "rodski.images", "rodski.images.*",
    "rodski.rodski_docs", "rodski.rodski_docs.*",
]

[tool.setuptools.package-data]
rodski = [
    "schemas/*.xsd",
    "config/*.yaml",
    "config/*.json",
]

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.coverage.run]
source = ["rodski"]
omit = ["*/tests/*", "*/demo_*/*"]

[tool.coverage.report]
fail_under = 80
precision = 2
